new settings config

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -4,6 +4,7 @@ nodaemon=true
 [program:app]
 priority=10
 directory=/opt
+environment = DJANGO_SETTINGS_MODULE=base.settings.prod
 command=/usr/bin/gunicorn base.wsgi:application -b unix:/tmp/gunicorn.sock --workers 2
 user=root
 autostart=true
