--- a/nginx_default.conf
+++ b/nginx_default.conf
@@ -21,7 +21,7 @@ server {
     }
 
     location /media/ {
-        alias   /opt/media/;
+        alias   /opt/data/media/;
     }
 
     location / {
