--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,6 +1,16 @@
 [supervisord]
 nodaemon=true
 
+[unix_http_server]
+file=/var/run/supervisor.sock   ; (the path to the socket file)
+chmod=0777                       ; sockef file mode (default 0700
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///var/tmp/supervisor.sock ; use a unix:// URL  for a unix socket
+
 [program:app]
 priority=10
 directory=/opt
