--- a/supervisor.conf
+++ b/supervisor.conf
@@ -15,7 +15,7 @@ serverurl=unix:///var/tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 priority=10
 directory=/opt
 environment = DJANGO_SETTINGS_MODULE=base.settings.prod
-command=/usr/bin/gunicorn base.wsgi:application -b unix:/tmp/gunicorn.sock --workers 2
+command=gunicorn base.wsgi:application -b unix:/tmp/gunicorn.sock --workers 2
 user=root
 autostart=true
 autorestart=true
